--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,6 @@
-{ "presets": ["env", "react"] }
+{
+  "presets": ["env", "react"],
+  "plugins": [
+    ["module-resolver", {"root": ["./src"]}]
+  ]
+}
