--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["env", "react"],
   "plugins": [
-    ["module-resolver", {"root": ["./src"]}]
+    ["module-resolver", {"root": ["./src"]}],
+    ["css-modules-transform", {"generateScopedName": "[local]_[hash:base64:5]"}]
   ]
 }
