--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "grundiss <grundiss@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build-client": "RENDER_MODE=BROWSER webpack --config webpack.config.js",
+    "build-client": "RENDER_MODE=BROWSER webpack --config webpack.config.js --display-chunks",
     "build-server": "RENDER_MODE=SERVER babel src --out-dir dist/ --source-maps inline",
     "build-watch":
-      "rm -rf ./dist &&  NODE_ENV=development RENDER_MODE=BROWSER yarn build-client -- --watch --devtool=inline-source-map & NODE_ENV=development RENDER_MODE=SERVER npm run build-server -- --delay 2.0 --watch",
+      "rm -rf ./dist && NODE_ENV=development RENDER_MODE=BROWSER yarn build-client --watch --devtool=inline-source-map & NODE_ENV=development RENDER_MODE=SERVER yarn build-server --delay 2.0 --watch",
     "start-watch":
       "NODE_ENV=development DEBUG=express:* RENDER_MODE=SERVER nodemon --inspect index.js --watch dist",
     "precommit": "lint-staged"
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-css-modules-transform": "^1.3.1",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
