--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["env", "react"],
   "plugins": [
     ["module-resolver", {"root": ["./src"]}],
-    ["css-modules-transform", {"generateScopedName": "[local]_[hash:base64:5]"}]
+    ["css-modules-transform", {"generateScopedName": "[local]_[hash:base64:5]"}],
+    ["inline-json-import", {}]
   ]
 }
