--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^1.14.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fa": "^5.0.0",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0"
