--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "font-awesome": "^4.7.0",
     "nodemon": "^1.14.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-fa": "^5.0.0",
+    "react-fontawesome": "^1.6.1",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0"
