--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "aws-sdk": "^2.176.0",
+    "axios": "^0.17.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-css-modules-transform": "^1.3.1",
@@ -21,6 +23,7 @@
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
