--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
+    "react-images": "^0.5.14",
+    "react-photo-gallery": "^6.0.22",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0"
