--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "license": "MIT",
   "scripts": {
     "build-client": "RENDER_MODE=BROWSER webpack --config webpack.config.js",
-    "build-server": "RENDER_MODE=SERVER babel src --out-dir dist/ --source-maps inline",
+    "build-server": "RENDER_MODE=SERVER babel src --out-dir dist/",
+    "build":
+      "rm -rf ./dist && NODE_ENV=production RENDER_MODE=BROWSER yarn build-client && NODE_ENV=production RENDER_MODE=SERVER yarn build-server",
     "build-watch":
-      "rm -rf ./dist && NODE_ENV=development RENDER_MODE=BROWSER yarn build-client --watch --devtool=inline-source-map & NODE_ENV=development RENDER_MODE=SERVER yarn build-server --delay 2.0 --watch",
+      "rm -rf ./dist && NODE_ENV=development RENDER_MODE=BROWSER yarn build-client --watch --devtool=inline-source-map & NODE_ENV=development RENDER_MODE=SERVER yarn build-server --source-maps inline --delay 2.0 --watch",
     "start-watch":
       "NODE_ENV=development DEBUG=express:* RENDER_MODE=SERVER nodemon --inspect index.js --watch dist",
     "precommit": "lint-staged"
