--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-fontawesome": "^1.6.1",
     "react-images": "^0.5.14",
     "react-photo-gallery": "^6.0.22",
+    "react-share": "^1.19.0",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.6.2",
